--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,5 @@
+version: 2.1
+
 jobs:
   build:
     docker:
@@ -5,3 +7,7 @@ jobs:
     steps:
       - checkout
       - run: node --version
+      - run: touch version.txt
+      - run: echo "node version test" > version.txt
+      - store_artifacts:
+        path: version.txt
